modules/algorithms/src/test/resources/PhRepexTestFiles/validRestart/5/LYS_penta_backup.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
   -1.6061434624396676E-02
 Current Atomic Velocities :
   -5.4042569435227410E+00
 Current Atomic Accelerations :
    6.7562926749089830E+01
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 11.90
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]        15         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         0         0         0         0         0         0         0         0         0         0
 [0.9-1.0]         0         0         0         0         0         0         0         0         0         0

