modules/algorithms/src/test/resources/PhRepexTestFiles/invalidAfterPhFail/2/LYS_penta_backup.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
    1.4479016670958504E+00
 Current Atomic Velocities :
    4.4505247367168860E-01
 Current Atomic Accelerations :
    2.3408635063242620E+02
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 8.90
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]        21         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]        12         0         0         0         0         0         0         0         0         0
 [0.9-1.0]        15         0         0         0         0         0         0         0         0         0

